fixed media querys so all content looks viewable on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ header nav ul {
 #about-me {
     display: flex;
     margin-top: 20px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 .vl {
@@ -95,7 +95,7 @@ header nav ul {
 
 #work {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     margin-top: 80px;
 }
 
@@ -179,7 +179,7 @@ h3 {
 
 .contact {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     margin-top: 80px;
     
 }
@@ -220,8 +220,6 @@ h3 {
     /* this will be applied on any screen smaller than 980px */
 
     header {
-        width: 97%;
-        padding-right: 42px;
         padding-bottom: 0;
         justify-content: center;
         position: relative;
@@ -233,77 +231,161 @@ h3 {
     }
 
     header nav ul {
-        margin-top: 50px;
         width: 100%;
-        justify-content: center;
     }
 
     header nav ul li a {
         font-size: 20px;
     }
 
-    .hero {
-        display: flex;
-        height: 150px;
-        width: 100%;
-        background-size: 100%;
-        color: aquamarine;
-        justify-content: right;
+    .hero-text h2 {
+        text-align: left;
+        margin-right: 160px;
+        background-color: aquamarine;
+        color: black;
+        border-radius: 20px;
     }
 
     #about-me {
-        justify-content: space-evenly;
+        flex-wrap: wrap;
     }
 
     #about-me h2 {
+        width: 100%;
         text-align: center;
-        margin: 0 20px 0 0;
+        margin: 0 0 0 0;
     }
 
-    .about-me p {
-        font-size: 1.5em ;
-        font-family:'Times New Roman', Times, serif;
-        text-align: justify;
-        
+    #about-me p {
+        text-align: center;
+        width: 95%;
+    }
+
+    .vl {
+        border: none;
+    }
+
+    #work {
+        flex-wrap: wrap;
+        width: 95%;
     }
 
     #work h2 {
-       text-align: center;
-       margin: 0 0 0 35%;
-       
+        width: 100%;
+        text-align: center;
     }
 
     #work img {
-        width: 80%;
+        width: 100%;
     }
 
-    #work h3 {
-        height: 10%;
+    #contact-me {
+        flex-wrap: wrap;
     }
 
-    .contact h2 {
-        margin-top: 50px;
+    #contact-me h2 {
+        width: 100%;
+        text-align: center;
+
     }
 
     .vl-contact {
-          /* display: inline-block; */
-          /* align-items: center; */
-        /* flex-wrap: wrap; */
-        margin-top: 25px;
-        /* justify-content: center; */
-       text-align: center;
-    } 
-
-    .vl-contact h2 {
-       align-items: center;
+        text-align: center;
+        border: none;
+        width: 100%;
     }
+
 }
 
 /*Media Query FOR TABLETS AND SMALLER */
 
 @media screen and (max-width: 768px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
 
-    .work img {
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        width: 100%;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    .hero-text h2 {
+       
+        /* text-align: left; */
+        /* margin: 0 0 0 0; */
+        /* padding: 0 0 0 ; */
+        /* margin-right: 160px; */
+        background-color: aquamarine;
+        color: black;
+        border-radius: 20px;
+    }
+
+    #about-me {
+        flex-wrap: wrap;
+    }
+
+    #about-me h2 {
+        width: 100%;
+        text-align: center;
+        margin: 0 0 0 0;
+    }
+
+    #about-me p {
+        text-align: center;
+        width: 95%;
+    }
+
+    .vl {
+        border: none;
+    }
+
+    #work {
+        flex-wrap: wrap;
+        width: 95%;
+    }
+
+    #work h2 {
+        width: 100%;
+        text-align: center;
+    }
+
+    #work img {
+        width: 100%;
+    }
+
+    #contact-me {
+        flex-wrap: wrap;
+    }
+
+    #contact-me h2 {
+        width: 100%;
+        text-align: center;
+
+    }
+
+    .vl-contact {
+        text-align: center;
+        border: none;
+        width: 100%;
+    }
+
+
+
+
+
+
+
+    /* .work img {
         width: 80%;
         height: 40%
     }
@@ -328,10 +410,10 @@ h3 {
         text-align: center;
     }
 
-    #about-me {
+    /* #about-me {
        
 
-    }
+    } */
 
     /* #about-me p {
         display:absolute;
@@ -341,10 +423,10 @@ h3 {
         
    /* } */
 
-    .vl {
+    /* .vl {
         border: none;
     }
-
+ */ 
 
     
 }
@@ -352,9 +434,103 @@ h3 {
 /*Media Query FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
 
-    
+    /* body {
+        width: 100%;
+    } */
+
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+    }
+
+    header nav ul {
+        width: 95%;
+       justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 25px;
+    }
+
+    .hero-text h2 {
+        text-align: center;
+        margin-right: 0;
+        background-color: aquamarine;
+        color: black;
+        border-radius: 20px;
+        width: 98%;
+    }
+
+    #about-me {
+        flex-wrap: wrap;
+    }
+
+    #about-me h2 {
+        width: 100%;
+        text-align: center;
+        margin: 0 0 0 0;
+    }
+
+    #about-me p {
+        text-align: center;
+        width: 92%;
+    }
+
+    .vl {
+        border: none;
+    }
+
+    #work {
+        flex-wrap: wrap;
+        width: 92%;
+    }
+
+    #work h2 {
+        width: 95%;
+        text-align: center;
+    }
 
     #work img {
+        width: 98%;
+    }
+
+    #contact-me {
+        flex-wrap: wrap;
+    }
+
+    #contact-me h2 {
+        width: 95%;
+        text-align: center;
+
+    }
+
+    .vl-contact {
+        border: none;
+        width: 100%;
+    }
+
+    .vl-contact div {
+        align-content:center;
+    }
+
+    .vl-contact a {
+        font-size: 25px;
+    }
+
+
+
+
+
+
+
+
+
+    /* #work img {
         width: 70%;
         height: 65%
     }
@@ -393,7 +569,7 @@ h3 {
         height: 40%;
         text-align: center;
         font-size: 20px;
-    }
+    } */
     
    
 }
